# flutter_rdkafka_lib

./: .metadata  Development_History.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/novice/flutter_rdkafka_lib_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_rdkafka_lib.podspec
lib/: flutter_rdkafka_lib.dart  flutter_rdkafka_lib_bindings_generated.dart
lib/src/: loader.dart
lib/src/rdkafka/: bridges.dart  signatures.dart  types.dart
linux/: CMakeLists.txt
macos/: flutter_rdkafka_lib.podspec
macos/Classes/: flutter_rdkafka_lib.c
src/: CMakeLists.txt  flutter_rdkafka_lib.c
windows/: CMakeLists.txt
